...
                    }
                    .padding(.horizontal)
                    .padding(.bottom)
                }
                .padding(.top)
            }
            .navigationTitle("Your Training Plan")
            .onAppear {
                refreshUserData()
            }
            .toolbar {
                ToolbarItem(placement: .principal) {
                    HStack {
...
